Log sleep as hours
